--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">app_PasoPopayan</string>
+    <string name="app_name">Paso Popayan</string>
     <string name="img_jesus_1">Inversions</string>
 
     <string name="seccion_logo"></string>
